--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -10,6 +10,9 @@ language:
   english: english
   italian: italian
 
+post:
+  minuteRead: minute(s) read
+
 footer:
   multilanguage: "Questa pagina è anche disponibile in:"
 
