--- a/_i18n/it.yml
+++ b/_i18n/it.yml
@@ -10,6 +10,9 @@ language:
   english: inglese
   italian: italiano
 
+post:
+  minuteRead: minuti di lettura
+
 footer:
   multilanguage: "This page is also available in:"
 
